<resources>
    <string name="app_name">Lab 8</string>
    <string name="title">Pizza Party!</string>
    <string name="rb1">chicken</string>
    <string name="rb2">sausage</string>
    <string name="rb3">cheese</string>
    <string name="pizzaButton">Make Pizza!</string>
    <string name="cb1">spinac</string>
    <string name="box1">spinach</string>
    <string name="box2">olives</string>
    <string name="box3">jalepenos</string>
    <string name="box4">bellpeppers</string>
    <string name="glutenSwitch">gluten-free crust</string>
    <string-array name="size">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>
</resources>